--- a/static/compatibilities/elastic-agent.yaml
+++ b/static/compatibilities/elastic-agent.yaml
@@ -4,13 +4,13 @@ release_url: https://github.com/elastic/elasticsearch/releases/tag/{vsn}
 helm_repository_url: https://helm.elastic.co
 readme_url: https://github.com/elastic/elasticsearch/blob/main/README.asciidoc
 versions:
-- version: 9.2.3
-  kube: ['1.34', '1.33', '1.32']
+- version: 9.2.4
+  kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
   summary: null
-  chart_version: 9.2.3
-  images: ['docker.elastic.co/elastic-agent/elastic-agent:9.2.3', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0']
+  chart_version: 9.2.4
+  images: ['docker.elastic.co/elastic-agent/elastic-agent:9.2.4', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0']
 - version: 9.2.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
@@ -18,6 +18,13 @@ versions:
   summary: null
   chart_version: 9.2.0
   images: ['docker.elastic.co/elastic-agent/elastic-agent:9.2.0', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0']
+- version: 9.1.9
+  kube: ['1.35', '1.34', '1.33']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 9.1.9
+  images: ['docker.elastic.co/elastic-agent/elastic-agent:9.1.9', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0']
 - version: 9.1.4
   kube: ['1.34', '1.33', '1.32']
   requirements: []
@@ -46,6 +53,13 @@ versions:
   summary: null
   chart_version: 9.0.0
   images: ['docker.elastic.co/elastic-agent/elastic-agent:9.0.0', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.15.0']
+- version: 8.19.10
+  kube: ['1.35', '1.34', '1.33']
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 8.19.10
+  images: ['docker.elastic.co/elastic-agent/elastic-agent:8.19.10', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.16.0']
 - version: 8.19.3
   kube: ['1.34', '1.33', '1.32']
   requirements: []
