--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,29 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: ['From v3.6.0, Traefik adds new ACME certificate resolver options, additional
+        provider enhancements (e.g., Docker can discover non-running containers, ECS
+        gains IPv6 support, Consul/Nomad logs provider namespace), and introduces
+        a Knative provider.', 'v3.6.0 also adds new load-balancing and health features
+        (least-time strategy, HighestRandomWeight, TCP health checks and passive health
+        checks), plus multi-layer routing, HTTP/2 HPACK table size tuning, and minor
+        dashboard/UI updates.', 'By v3.6.6, changes are primarily bugfix and dependency
+        bumps rather than new functionality (ACME lego to v4.30.1, HTTP/3 quic-go
+        to v0.58.0, Redis verification logic fix, and a server fix to deny encoded
+        characters).']
+    breaking_changes: ["v3.6.0 explicitly calls out an \"Important\" migration guide;\
+        \ treat this as potentially containing breaking changes for 3.5\u21923.6 and\
+        \ ensure configuration/CRDs/providers align before upgrading.", No breaking
+        changes are indicated in the v3.6.6 notes; it appears to be a patch release
+        with bug fixes and documentation updates.]
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
